doc/2.8/_sources/reference/generated/ak.firsts.rst.txt
ak.firsts
---------

.. py:module: ak.firsts

Defined in `awkward.operations.ak_firsts <https://github.com/scikit-hep/awkward/blob/0b5ee6e87d2a6d475c58ee0b3ff2106b415311fd/src/awkward/operations/ak_firsts.py>`__ on `line 25 <https://github.com/scikit-hep/awkward/blob/0b5ee6e87d2a6d475c58ee0b3ff2106b415311fd/src/awkward/operations/ak_firsts.py#L25>`__.

.. py:function:: ak.firsts(array, axis=1, *, highlevel=True, behavior=None, attrs=None)


    :param array: Array-like data (anything :py:obj:`ak.to_layout` recognizes).
    :param axis: The dimension at which this operation is applied. The
             outermost dimension is ``0``, followed by ``1``, etc., and negative
             values count backward from the innermost: ``-1`` is the innermost
             dimension, ``-2`` is the next level up, etc.
             If a str, it is interpreted as the name of the axis which maps to
             an int if named axes are present.
             Named axes are attached to an array using :py:obj:`ak.with_named_axis` and
             removed with :py:obj:`ak.without_named_axis`; also see the
             `Named axes user guide <../../user-guide/how-to-array-properties-named-axis.html>`__.
    :type axis: int or str
    :param highlevel: If True, return an :py:obj:`ak.Array`; otherwise, return
                  a low-level :py:obj:`ak.contents.Content` subclass.
    :type highlevel: bool
    :param behavior: Custom :py:obj:`ak.behavior` for the output array, if
                 high-level.
    :type behavior: None or dict
    :param attrs: Custom attributes for the output array, if
              high-level.
    :type attrs: None or dict

Selects the first element of each non-empty list and inserts None for each
empty list.

For example,

.. code-block:: python


    >>> array = ak.Array([[1.1], [2.2], [], [3.3], [], [], [4.4], [5.5]])
    >>> ak.firsts(array).show()
    [1.1,
     2.2,
     None,
     3.3,
     None,
     None,
     4.4,
     5.5]

See :py:obj:`ak.singletons` to invert this function.

